<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/mode_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="110dp"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="53dp"
            android:text="@string/mode_choice"
            android:textSize="30sp" />

    <Button
            android:id="@+id/manual_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="147dp"
            android:layout_marginEnd="120dp"
            android:layout_marginRight="120dp"
            android:text="@string/manual_driving" />

    <Button
            android:id="@+id/auto_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mode_choice"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="102dp"
            android:layout_marginLeft="102dp"
            android:layout_marginTop="53dp"
            android:text="@string/auto_driving" />

    <Button
            android:id="@+id/cloud_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="104dp"
            android:layout_marginLeft="104dp"
            android:layout_marginBottom="82dp"
            android:text="@string/cloud_driving" />

    <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="136dp"
            android:layout_marginRight="136dp"
            android:layout_marginBottom="78dp"
            android:text="@string/disconnect" />

</RelativeLayout>
